# mdict-web

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  mdict-web.toml.example
.codex/: STATUS.md
crates/mdict-web-app/: Cargo.toml
crates/mdict-web-app/benches/: lookup.rs
crates/mdict-web-app/src/: main.rs
crates/mdict-web-config/: Cargo.toml
crates/mdict-web-config/src/: lib.rs
crates/mdict-web-domain/: Cargo.toml
crates/mdict-web-domain/src/: lib.rs
crates/mdict-web-engine/: Cargo.toml
crates/mdict-web-engine/src/: lib.rs
crates/mdict-web-http/: Cargo.toml
crates/mdict-web-http/src/: lib.rs
crates/mdict-web-http/tests/: local_api.rs
crates/mdict-web-index/: Cargo.toml
crates/mdict-web-index/src/: lib.rs
crates/mdict-web-service/: Cargo.toml
crates/mdict-web-service/src/: lib.rs
docs/: API_CONTRACT.md  IMPLEMENTATION_PLAN.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DictionaryCard.tsx  EntryViewer.tsx  GlobalSearchBar.tsx  SearchBar.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/hooks/: useDebounce.ts  useSearchSuggest.ts  useSuggest.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DictionaryPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/types/: api.ts
nix/: module.nix
