[workspace]
members = [
    "crates/mdict-web-app",
    "crates/mdict-web-config",
    "crates/mdict-web-domain",
    "crates/mdict-web-engine",
    "crates/mdict-web-http",
    "crates/mdict-web-index",
    "crates/mdict-web-service",
]
default-members = ["crates/mdict-web-app"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "json", "macros", "query", "tokio"] }
blake3 = "1.8"
bytes = { version = "1.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
criterion = { version = "0.7", features = ["async_tokio"] }
fst = "0.4"
futures-core = "0.3"
http = "1.3"
http-body-util = "0.1"
lol_html = "2.7"
mdict-rs = { version = "0.1.4", path = "../mdict-rs" }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
mime = "0.3"
mime_guess = "2.0"
moka = { version = "0.12", features = ["sync"] }
percent-encoding = "2.3"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.47", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
toml = "0.9"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4", "v7"] }
walkdir = "2.5"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
