[package]
name = "mdict-web-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mdict-rs.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
