[package]
name = "mdict-web-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fst.workspace = true
mdict-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
